--- a/style.css
+++ b/style.css
@@ -23,7 +23,6 @@ body{
     background-color: rgb(180, 250, 250);
 }
 .nav-link {
-color:black;
 font-size: 22px;
 font-family: "joly-text", sans-serif;
 font-weight: 400;
@@ -51,4 +50,7 @@ font-family: "joly-text", sans-serif;
 font-weight: 400;
 font-style: normal;
 font-size:17px;
+}
+.footer{
+    background-color:rgb(180, 250, 250);
 }
