--- a/style.css
+++ b/style.css
@@ -22,11 +22,15 @@ body{
 .card{
     background-color: rgb(180, 250, 250);
 }
+.card:hover{
+background-color: lavenderblush;
+}
 .nav-link {
 font-size: 22px;
 font-family: "joly-text", sans-serif;
 font-weight: 400;
 font-style: normal;
+color:lavender;
 }
 p{
     color:black;
@@ -53,4 +57,9 @@ font-size:17px;
 }
 .footer{
     background-color:rgb(208, 247, 247);
+}
+.btn{
+    font-family: "ivystyle-tw", sans-serif;
+font-weight: 400;
+font-style: normal;
 }
