--- a/style.css
+++ b/style.css
@@ -23,14 +23,14 @@ body{
     background-color: rgb(180, 250, 250);
 }
 .card:hover{
-background-color: lavenderblush;
+background-color: lavender;
 }
 .nav-link {
 font-size: 22px;
 font-family: "joly-text", sans-serif;
 font-weight: 400;
 font-style: normal;
-color:lavender;
+color:black;
 }
 p{
     color:black;
