--- a/style.css
+++ b/style.css
@@ -1,15 +1,18 @@
+/* font3*/
 .joly-text{
 font-family: "joly-text", sans-serif;
 font-weight: 400;
 font-style: normal;
 font-size:34px;
 }
+/* font2 */
 .ivystyle-tw{
 font-family: "ivystyle-tw", sans-serif;
 font-weight: 400;
 font-style: normal;
 font-size:26px;
 }
+/* font1 */
 .estro-mn{
 font-family: "estro-mn", sans-serif;
 font-weight: 400;
@@ -22,6 +25,7 @@ body{
 .card{
     background-color: rgb(180, 250, 250);
 }
+/* cover for cards */
 .card:hover{
 background-color: lavender;
 }
@@ -46,6 +50,7 @@ font-style: normal;
 font-size:25px;
 color:black;
 }
+/* image with navbar */
 .image{
 width:80px;
 }
@@ -55,9 +60,11 @@ font-weight: 400;
 font-style: normal;
 font-size:17px;
 }
+/* footer */
 .footer{
     background-color:rgb(208, 247, 247);
 }
+/* button with added font */
 .btn{
     font-family: "ivystyle-tw", sans-serif;
 font-weight: 400;
