--- a/style.css
+++ b/style.css
@@ -1,72 +1,60 @@
-/* font3*/
 .joly-text{
-font-family: "joly-text", sans-serif;
-font-weight: 400;
-font-style: normal;
-font-size:34px;
-}
-/* font2 */
-.ivystyle-tw{
-font-family: "ivystyle-tw", sans-serif;
-font-weight: 400;
-font-style: normal;
-font-size:26px;
-}
-/* font1 */
-.estro-mn{
-font-family: "estro-mn", sans-serif;
-font-weight: 400;
-font-style: normal;
-font-size:40px;
-}
-body{
-    background-color: lightblue;
-}
-.card{
-    background-color: rgb(180, 250, 250);
-}
-/* cover for cards */
-.card:hover{
-background-color: lavender;
-}
-.nav-link {
-font-size: 22px;
-font-family: "joly-text", sans-serif;
-font-weight: 400;
-font-style: normal;
-color:black;
-}
-p{
-    color:black;
-font-size: 22px;
-font-family: "joly-text", sans-serif;
-font-weight: 400;
-font-style: normal;
-}
-.nicholas{
-font-family: "nicholas", sans-serif;
-font-weight: 400;
-font-style: normal;
-font-size:25px;
-color:black;
-}
-/* image with navbar */
-.image{
-width:80px;
-}
-.dropdown-item{
-font-family: "joly-text", sans-serif;
-font-weight: 400;
-font-style: normal;
-font-size:17px;
-}
-/* footer */
-.footer{
-    background-color:rgb(208, 247, 247);
-}
-/* button with added font */
-.btn{
+    font-family: "joly-text", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size:34px;
+    }
+    .ivystyle-tw{
     font-family: "ivystyle-tw", sans-serif;
-font-weight: 400;
-font-style: normal;
-}
+    font-weight: 400;
+    font-style: normal;
+    font-size:20px;
+    }
+    .estro-mn{
+    font-family: "estro-mn", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size:40px;
+    }
+    body{
+       background-color: lightblue;
+    }
+    .card{
+       background-color: rgb(180, 250, 250);
+    }
+    .nav-link {
+    font-size: 22px;
+    font-family: "joly-text", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    }
+    p{
+       color:black;
+    font-size: 22px;
+    font-family: "joly-text", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    }
+    .nicholas{
+    font-family: "nicholas", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size:25px;
+    color:black;
+    }
+    .image{
+    width:80px;
+    }
+    .dropdown-item{
+    font-family: "joly-text", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size:17px;
+    }
+    .footer{
+       background-color:rgb(180, 250, 250);
+    }
+    .card-img-top{
+       height:240px;
+    }
+    
